2004-01-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/ddk/cfgmgr32.def: Remove duplicate symbol names.

2004-01-01  Mattia Barbon  <mbarbon@users.sourceforge.net>

	* include/commctrl.h (TVN_GETINFOTIP): Add UNICODE mappings.
	(NMTVGETINFOTIP): Add structure.

2003-12-08  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (DISPLAY_DEVICE_*): Remove defines.
	* include/wingdi.h  (DISPLAY_DEVICE_REMOVABLE,
	DISPLAY_DEVICE_MODESPRUNED): Add defines.

2003-12-08  Hartmut Honisch  <hhonisch@users.sourceforge.net>

	* include/commctrl.h (ListView_Get_State, ListView_Check_State):
	Add macros.
	* include/wingdi.h  (DISPLAY_DEVICE_*): Add multi-monitor
	constants.
	* include/shlobj.h (SHCOLUMNINIT); Add structure.
	(SHCOLUMNDAT): Likwise.
	(SHCOLUMNID): Likewise.
	(SHCOLUMNINFO): Likewise.
	(SHCOLSTATE): Add enum.
	(IColumnProvider): Add COM interface.
	(IQueryInfo): Likewise.
	(IShellIconOverlayIdentifier): Likewise. 
  	* include/shlguid.h (IID_IColumnProvider) Declare.
	(IID_IQueryInfo): Likweise.
	(IID_IShellIconOverlayIdentifier): Likwise. 
	* lib/shell32.c (IID_IColumnProvider) Define.
	(IID_IQueryInfo): Likweise.
	(IID_IShellIconOverlayIdentifier): Likwise.

2003-12-08  Roald Ribe <rrib@users.sourceforge.net>

	* include/winuser.h (RT_MANIFEST): Add define.

2003-12-08  Pascal Buhler <pbuhler@users.sourceforge.net>

	* include/oleidl.h (IViewObject2): Inherit from IViewObject.

2003-12-01  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (GetCurrentFiber): Remove duplicate prototype.
	(GetFiberData); Likewise.
	(GetCurrentFiber): Change volatile to __volatile__.
	(GetFiberData); Likewise.

2003-11-27  Christopher Faylor  <cgf@redhat.com>

	* lib/Makefile.in: Use make function to locate .mri file to allow
	building in directory other than source directory.

2003-11-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* lib/vfw32.def: Remove, replacing with ...
	* lib/msvfw32.def: New file.